--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <link rel="preconnect" href="https://cdn.jsdelivr.net"/>
+      <link rel="dns-prefetch" href="https://cdn.jsdelivr.net"/>
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Youtube Unblocked</title>
-      <meta name="title" content="Youtube Unblocked - Watch Videos Unblocked In School" />
-      <meta name="description" content="Watch Youtube Videos, Vimeo Videos, And Dailymotion Videos In School Unblocked. Share Videos & View Comments Unblocked In School!" />
+      <meta name="title" content="Youtube Unblocked - Watch Videos Unblocked In School"/>
+      <meta name="description" content="Watch Youtube Videos, Vimeo Videos, And Dailymotion Videos In School Unblocked. Share Videos & View Comments Unblocked In School!"/>
       <style>
          @font-face {
             font-family: "Open Sans";
@@ -83,8 +85,7 @@
          *:focus {
             outline: none;
          }
-         html,
-         body {
+         html, body {
             margin: 0;
             padding: 0;
             margin-top: 2px;
@@ -258,52 +259,52 @@
             border-radius: 50px;
          }
          .second {
-            width: 265px !important;
-            background-color: white;
-            border-radius: 10px;
-            box-shadow: 1px 1px 5px #aaaaaa;
+             width: 265px !important;
+             background-color: white;
+             border-radius: 10px;
+             box-shadow: 1px 1px 5px #aaaaaa;
          }
          .text1 {
-            font-size: 15px;
-            font-weight: 600;
-            color: #56575b;
+             font-size: 15px;
+             font-weight: 600;
+             color: #56575b;
          }
          .text2 {
-            font-size: 13px;
-            font-weight: 500;
-            color: #56575b;
+             font-size: 13px;
+             font-weight: 500;
+             color: #56575b;
          }
          .text3 {
-            font-size: 15px;
-            font-weight: 500;
-            color: #56575b;
+             font-size: 15px;
+             font-weight: 500;
+             color: #56575b;
          }
          .justify-content-center {
-            -ms-flex-pack: center !important;
-            justify-content: center !important;
+             -ms-flex-pack: center !important;
+             justify-content: center !important;
          }
          .justify-content-between {
-            -ms-flex-pack: justify !important;
-            justify-content: space-between !important;
+             -ms-flex-pack: justify !important;
+             justify-content: space-between !important;
          }
          .d-flex {
-            display: -ms-flexbox !important;
-            display: flex !important;
+             display: -ms-flexbox !important;
+             display: flex !important;
          }
          .py-2 {
-            padding-top: 0.5rem !important;
-            padding-bottom: 0.5rem !important;
+             padding-top: 0.5rem !important;
+             padding-bottom: 0.5rem !important;
          }
          .px-2 {
-            padding-left: 0.5rem !important;
-            padding-right: 0.5rem !important;
+             padding-left: 0.5rem !important;
+             padding-right: 0.5rem !important;
          }
          .py-1 {
-            padding-top: 0.25rem !important;
-            padding-bottom: 0.25rem !important;
+             padding-top: 0.25rem !important;
+             padding-bottom: 0.25rem !important;
          }
          .pt-2 {
-            padding-top: 0.5rem !important;
+             padding-top: 0.5rem !important;
          }
          #flex-box {
             display: flex;
@@ -318,7 +319,7 @@
          }
       </style>
    </head>
-   <body class="elo">
+   <body>
       <div class="header__top__border"></div>
       <div id="classroom-youtube">
          <div id="content">
@@ -335,18 +336,18 @@
                </div>
             </div>
             <div id="flex-box">
-               <div style="flex: 1;">
-                  <div id="video-player" style="display: none;">
+               <div style="flex: 1">
+                  <div id="video-player" style="display: none">
                      <iframe src="" id="youtube-iframe" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </div>
                   <center>
-                     <p class="m-10 yt-controls" style="display: none;">
+                     <p class="m-10 yt-controls" style="display: none">
                         <button data-tippy-content="Copy Share URL" id="share" class="st-btn controls-btn" onclick="sharevideo()" style="border-radius: 10px;">Share Video</button>
                         <button class="st-btn controls-btn" onclick="keyboard('s')" style="border-radius: 10px;">Change Video</button>
                      </p>
                   </center>
                </div>
-               <div id="commentsx" class="yt-controls" style="margin-left: 15px; display: none;">
+               <div id="commentsx" class="yt-controls" style="margin-left:15px;display: none">
                   <h2 class="h2-c">Details</h2>
                   <div id="detail-section" class="text3">
                      <ul>
@@ -443,29 +444,29 @@
             });
          }
          function formatdate(d) {
-            var date = new Date(d);
-            if (isNaN(date.getTime())) {
-               return d;
-            } else {
-               var month = new Array();
-               month[0] = "January";
-               month[1] = "February";
-               month[2] = "March";
-               month[3] = "April";
-               month[4] = "May";
-               month[5] = "June";
-               month[6] = "July";
-               month[7] = "August";
-               month[8] = "September";
-               month[9] = "October";
-               month[10] = "November";
-               month[11] = "December";
-               day = date.getDate();
-               if (day < 10) {
-                  day = "0" + day;
-               }
-               return month[date.getMonth()] + " " + day + ", " + date.getFullYear();
-            }
+             var date = new Date(d);
+             if (isNaN(date.getTime())) {
+                 return d;
+             } else {
+                 var month = new Array();
+                 month[0] = "January";
+                 month[1] = "February";
+                 month[2] = "March";
+                 month[3] = "April";
+                 month[4] = "May";
+                 month[5] = "June";
+                 month[6] = "July";
+                 month[7] = "August";
+                 month[8] = "September";
+                 month[9] = "October";
+                 month[10] = "November";
+                 month[11] = "December";
+                 day = date.getDate();
+                 if (day < 10) {
+                     day = "0" + day;
+                 }
+                 return month[date.getMonth()] + " " + day + ", " + date.getFullYear();
+             }
          }
          function video_json(yt_id) {
             d_URL = "https://youtube-class-api.herokuapp.com/youtube/details/?id=" + yt_id;
@@ -474,10 +475,10 @@
                $("#vid-name").html(data.channel.name);
                $("#vid-cat").html(data.category);
                $("#vid-date").html(formatdate(data.publishDate));
-               if (data.category == "Gaming" || data.category == "People & Blogs") {
-                  $("#vid-blocked").html("Yes");
-               } else {
-                  $("#vid-blocked").html("No");
+               if(data.category == "Gaming" || data.category == "People & Blogs"){
+                  $("#vid-blocked").html('Yes');
+               }else{
+                  $("#vid-blocked").html('No');
                }
             });
             c_URL = "https://youtube-class-api.herokuapp.com/youtube/comments/?id=" + yt_id;
@@ -485,11 +486,11 @@
                comments(data);
             });
          }
-         function comments(data) {
-            if (data.error) {
-               $("#comment-section").hide();
-               $(".comment-h2-c").hide();
-            } else {
+         function comments(data){
+            if(data.error){
+               $('#comment-section').hide();
+               $('.comment-h2-c').hide();
+            }else{
                $.each(data["items"], function (i, item) {
                   var content = item.snippet.topLevelComment.snippet.textDisplay;
                   var author = item.snippet.topLevelComment.snippet.authorDisplayName;
@@ -502,8 +503,8 @@
                           </div>
                         </div>
                   `);
-                  $("#comment-section").show();
-                  $(".comment-h2-c").show();
+                  $('#comment-section').show();
+                  $('.comment-h2-c').show();
                   $("#comment-section").animate({ scrollTop: 0 }, "fast");
                });
             }
@@ -520,7 +521,7 @@
                   var views = item.viewCount.short;
                   d_URL = "https://youtube-class-api.herokuapp.com/youtube/details/?id=" + vid;
                   $.getJSON(d_URL, function (data) {
-                     if (data.category == "Gaming" || data.category == "People & Blogs") {
+                     if(data.category == "Gaming" || data.category == "People & Blogs"){
                         $("#search-results-json").append(`
                            <article class="item" data-key="${vid}">
                              <div class="img-container">
@@ -535,7 +536,7 @@
                                </div>
                            </article>
                        `);
-                     } else {
+                     }else{
                         $("#search-results-json").append(`
                            <article class="item" data-key="${vid}">
                              <div class="img-container">
@@ -625,8 +626,8 @@
             var newRelativePathQuery = window.location.pathname + "?" + searchParams.toString();
             history.pushState(null, "", newRelativePathQuery);
             if (window.location.href.indexOf("?video=") > -1 || window.location.href.indexOf("&video=") > -1) {
-               copyTextToClipboard(document.location);
-            } else {
+                  copyTextToClipboard(document.location);
+            }else{
                if (window.location.href.indexOf("?") > -1) {
                   copyTextToClipboard(document.location + "&video=" + id);
                } else {
@@ -667,6 +668,6 @@
       <script async defer src="https://cdn.jsdelivr.net/gh/aFarkas/lazysizes/lazysizes.min.js"></script>
       <script async defer src="https://cdn.jsdelivr.net/gh/Dheirya/Youtube-Unblocked/tippy.js"></script>
       <script async defer src="https://cdn.jsdelivr.net/gh/Dheirya/Youtube-Unblocked/dragresize.js"></script>
-      <script async defer src="https://cdn.jsdelivr.net/gh/Dheirya/social-rumbles-js-linker/linker.js"></script>
+      <script async defer src="https://cdn.jsdelivr.net/gh/Dheirya/Youtube-Unblocked/autolinking.js"></script>
    </body>
 </html>
